@@ -1264,7 +1264,7 @@ function showImageMap($index) {
         foreach($allImageAreas as $nr => $area) {
             $html .= "\n\t<area alt=\"my nice Map $nr\" title=\"my nice Map $nr\" shape=\"poly\" ".
                 "coords=\"". $area['coords'] ."\" ".
-                "onmouseover=\"return escape('". $area['hover_text'] ."')\" href=\"#\"";
+                "onmouseover=\"return escape('". str_replace("\r\n", "<br>",$area['hover_text']) ."')\" href=\"#\"";
 
             if(!empty($area['url'])) {
                 $html .=' href="'. $area['url'] .'"';
