@@ -1,3 +1,7 @@
+2006-11-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b4
+
+ * Fix: Text with linebreaks didnt work in imagemap description.
+
 2006-11-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b3
 
  * Fix: Return link from publish XP docs was wrong.
